next 2014/03/12
	* Give access to some numerical parameters of the RK4 integrator
	* rename functions from setMass/getMass style to mass()/mass() style.
	  Are concerned the following (new names):
	  Metric::mass, Metric::coordKind, Metric::kind, Screen::coordKind,
	  KerrBL::spin, KerrKS::spin

0.1.0 2013/07/27 ABI 1
	* add units system
	* add PolishDoughnut astrobj
	* use pkg-config
	* gyotoy ported to yorick-gy instead of python
	* in Worldline, Photon and Scenery: rename tlim to tmin, default
	  value is -DBL_MAX.
	* add a mutli-wavelength flavour of Astrobj::emission()
	* install yorick plug-in under ${prefix}, not necessarily in Y_HOME
	* add plugin attribute to the Metric, Astrobj and Spectrum entities
	* reform build system to use the autotools
	* add --plugins command-line option
	* add virtual destrcuctor to Spectrum::Generic
	* fix buffer overflow in lib/Factory.C
	* update paper ref in bin/gyoto.C

0.0.3 2012/05/01 BUG
	* fix a tiny bug in PatternDisk (initialization of phimin/max)
	* rearrange flags in Makefiles/local_settings
	  for easier downstream packaging

0.0.2 2012/04/19 PKG
	* install include files in include/Gyoto
	* add this ChangeLog

0.0.1 2012/04/16 ABI 0
	* release